--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head> <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
- Urbadigitech | Your technology partner</title>
+  <title>  Urbadigitech | Your technology partner</title> <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <style>
     body { font-family: 'Segoe UI', sans-serif; margin: 0; padding: 0; background-color: #f4f7fb; color: #1a1a1a; }
     header { background-color: #004aad; color: white; padding: 30px 20px; text-align: center; }
